# odin-l2-lambda

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  copilot-instructions.md
level2/: requirements.txt
level2/handlers/: batch.py  level2.py  level2_jobs.py
stacks/: level2_jobs_stack.py  level2_stack.py  qsmr_ecr_stack.py
tests/: test_batch.py
tests/level1b/handlers/: test_level2.py
tests/level2/handlers/: test_level2.py  test_level2_jobs.py
